--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-	"name": "hafriedlander/phockito",
-	"description": "PHP Mocking framework inspired by Mockito for Java",
-	"keywords": ["mocks", "testing", "mockito"],
-	"license": "BSD-3-Clause",
-	"authors": [
-		{
-			"name": "Hamish Friedlander",
-			"email": "hamish@silverstripe.com"
-		}
-	],
-	 "autoload": {
-			"classmap": ["."]
-		}
+    "name": "crashuxx/phockito",
+    "description": "PHP Mocking framework inspired by Mockito for Java",
+    "keywords": ["mocks", "testing", "mockito"],
+    "license": "BSD-3-Clause",
+    "authors": [
+        {
+            "name": "Hamish Friedlander",
+            "email": "hamish@silverstripe.com"
+        }
+    ],
+    "autoload": {
+        "classmap": ["."]
+    }
 }
