--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,15 @@
             "": "src"
         }
     },
+    "autoload-dev": {
+        "psr-0": {
+            "": "tests"
+        }
+    },
     "require": {
         "hamcrest/hamcrest-php": "~1.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.3"
     }
 }
